Update .env.example with proper placeholder values

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,11 @@
- 
+# Use one random string in this JWT secret
+JWT_SECRET="your_jwt_secret_here"
+
+# Set up stripe - using strip secret key in test mode
+STRIPE_SECRET_KEY="your_stripe_secret_key_here"
+
+# AWS Configuration
+AWS_ACCESS_KEY_ID="your_aws_access_key_here"
+AWS_SECRET_ACCESS_KEY="your_aws_secret_key_here"
+AWS_REGION="your_aws_region_here"
+AWS_BUCKET_NAME="your_bucket_name_here" 
