--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,18 @@
-# Use one random string in this JWT secret
-JWT_SECRET="your_jwt_secret_here"
+# Server Configuration
+PORT=4000
 
-# Set up stripe - using strip secret key in test mode
-STRIPE_SECRET_KEY="your_stripe_secret_key_here"
+# MongoDB Configuration
+MONGODB_URI=mongodb+srv://your-username:your-password@your-cluster.mongodb.net/your-database
+
+# JWT Configuration
+JWT_SECRET=your-jwt-secret
 
 # AWS Configuration
-AWS_ACCESS_KEY_ID="your_aws_access_key_here"
-AWS_SECRET_ACCESS_KEY="your_aws_secret_key_here"
-AWS_REGION="your_aws_region_here"
-AWS_BUCKET_NAME="your_bucket_name_here" 
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+AWS_REGION=ap-southeast-2
+AWS_BUCKET_NAME=food-delivery-images-bucket
+
+# CORS Configuration
+FRONTEND_URL=http://localhost:3000
+ADMIN_URL=http://localhost:3001
