--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,13 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "server":"nodemon server.js",
-    "start": "node server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "build": "echo 'Building backend...'",
+    "vercel-build": "echo 'Vercel build completed'"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "repository": {
     "type": "git",
@@ -29,6 +34,7 @@
   "homepage": "https://github.com/TiM1113/Project-FoodDelivery#readme",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.722.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
