--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "build": "echo 'Building backend...'",
-    "vercel-build": "echo 'Vercel build completed'",
+    "build": "npm install",
+    "vercel-build": "echo 'Build completed'",
     "test": "node test.js"
   },
   "engines": {
