--- a/admin/package.json
+++ b/admin/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^22.10.5",
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1",
+    "react-router-dom": "^7.1.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
