--- a/admin/.env.production
+++ b/admin/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://backend-ten-azure-58.vercel.app
-VITE_S3_URL=https://food-delivery-images-bucket.s3.ap-southeast-2.amazonaws.com 
+REACT_APP_API_URL=https://backend-ten-azure-58.vercel.app
+REACT_APP_S3_URL=https://food-delivery-images-bucket.s3.ap-southeast-2.amazonaws.com 
