--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://backend-ten-azure-58.vercel.app/api
+REACT_APP_API_URL=https://backend-ten-azure-58.vercel.app
 REACT_APP_S3_URL=https://food-delivery-images-bucket.s3.ap-southeast-2.amazonaws.com 
