fix: correct environment variables from REACT_APP to VITE prefixes
- Update frontend and admin .env.production files
- Fix admin .env file with correct backend URL
- Resolve environment variable mismatch causing API connection failures

--- a/admin/.env
+++ b/admin/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=https://project-fooddelivery.onrender.com
+VITE_API_URL=https://backend-ten-azure-58.vercel.app
+VITE_S3_URL=https://food-delivery-images-bucket.s3.ap-southeast-2.amazonaws.com
